fix: banner block overflow

--- a/_src/scss/_banner.scss
+++ b/_src/scss/_banner.scss
@@ -9,14 +9,14 @@
          z-index: 4;
       }
    }
+   &__content {
+      padding: 56px 0;
+   }
    &__body {
       position: relative;
-      background: url('../img/banner/main_image.webp') right center / contain no-repeat;
+      background: url('../img/banner/main_image.webp') right center / cover no-repeat;
       border-radius: 10px;
-      padding: 56px 10px;
-      @media (max-width: 1400px) {
-         background: url('../img/banner/main_image.webp') right center / cover no-repeat;
-      }
+      padding: 0px 10px;
       @media (max-width: $md1) {
          padding: 40px 10px;
       }
@@ -30,13 +30,10 @@
          content: '';
          width: 100%;
          height: 100%;
-         background: url('../img/banner/gradiend.webp') left center / contain no-repeat;
+         background: url('../img/banner/gradiend.webp') left center / cover no-repeat;
          top: 0;
          left: 0;
          z-index: 1;
-         @media (max-width: 1400px) {
-            background: url('../img/banner/gradiend.webp') left center / cover no-repeat;
-         }
          @media (max-width: $md3) {
             display: none;
          }
@@ -63,6 +60,7 @@
       color: #ffffff;
       letter-spacing: 0.2px;
       margin: 0px 0px 19px 0px;
+      max-width: 600px;
       @media (max-width: $md1) {
          margin: 0px 0px 10px 0px;
       }
